# bevy_amoeba

./: .gitignore  Cargo.toml
.cargo/: config.toml
assets/shaders/: soft_body_compute.wgsl  soft_body_material.wgsl
examples/: basic.rs
src/: assets.rs  compute.rs  instances.rs  instances.wgsl  lib.rs  mesh.rs  nodes.rs  nodes.wgsl  particle.rs  particle.wgsl  rand.wgsl  soft_body_compute.rs  soft_body_material.rs  vertices.rs  vertices.wgsl
